# bumblebee

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
conf/: evaluate_memory.yaml  train.yaml  train_memory.yaml
conf/benchmark/: babilong.yaml  mqar.yaml  nolima.yaml  ruler.yaml
conf/eval_suite/: memory_state_core.yaml
conf/evaluator/: memory_diagnostic.yaml  memory_proxy_quick.yaml
conf/experiment/: lm_baseline.yaml  lm_gated.yaml  lm_titans.yaml  smoke.yaml
conf/logging/: tensorboard.yaml
conf/model/: memory_lm_100m.yaml  oracle.yaml  phi35_mini.yaml  qwen25_3b.yaml
conf/runtime/: default.yaml
conf/track/: hierarchical_programs.yaml
conf/trainer/: default.yaml  memory_lm.yaml
configs/tracks/: adaptive_inference.yaml  memory_state.yaml
docs/: memory_state_eval_suite.md  research_program.md  roadmap.md  seed_papers.md  titans_implementation_audit.md
experiments/: README.md  eval_memory.py  train.py
experiments/adaptive_inference/: README.md
experiments/hierarchical_programs/: README.md
experiments/memory_state/: README.md  checkpoint_inspect.py  compare_runs.py  data.py  gate_auroc.py  train_memory.py
notes/: README.md
notes/adaptive_inference/: README.md
notes/hierarchical_programs/: README.md
notes/memory_state/: README.md  eval_suite.md  (+2 more)
tests/: test_benchmark_registry.py  test_eval_memory.py  test_gated_memory.py  test_lm_backbone.py  test_memory_state_plan_regressions.py  test_memory_state_proxy_tasks.py  test_research_program.py  test_runtime.py  test_smoke_train.py  test_titans_mac.py  test_track_registry.py  test_write_gate.py
(+18 files in other folders)
